docs: add swagger.json and README
